# pyduck-ona-profile

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: changelog.md  index.md
docs/api/: events.md  index.md  query.ask.md  query.matcher.md  query.patterns.md  schema.md  subject.md  timeline.md
examples/: full_demo.py
src/pyduck_ona_profile/: __init__.py  events.py  schema.py  snapshots.py  subject.py  timeline.py
src/pyduck_ona_profile/query/: __init__.py  ask.py  matcher.py  patterns.py
tests/: conftest.py  test_events.py  test_query.py  test_query_security.py  test_schema.py  test_subject.py  test_timeline.py
