[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyduck-ona-profile"
version = "0.1.0"
description = "Subject-centric, time-aware people analytics on top of pyduck-ona (no LLM required)."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "EzraAir555", email = "ezraair555@gmail.com"},
]
maintainers = [
    {name = "EzraAir555", email = "ezraair555@gmail.com"},
]
keywords = [
    "duckdb", "hr", "people-analytics", "organizational-network-analysis",
    "ona", "hierarchy", "employee-profile", "temporal", "sentence-transformers",
    "pattern-matching", "pyduck-ona",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Human Resources Professionals",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typired :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "pyduck-ona>=0.1.5",
    "duckdb>=1.0",
    "pyarrow>=15.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "black>=24.0",
    "isort>=5.13",
    "mypy>=1.10",
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage = "https://github.com/ezraair555/pyduck-ona-profile"
Documentation = "https://ezraair555.github.io/pyduck-ona-profile/"
Repository = "https://github.com/ezraair555/pyduck-ona-profile"
Issues = "https://github.com/ezraair555/pyduck-ona-profile/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pyduck_ona_profile" = ["py.typed", "query/patterns/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["pyduck_ona_profile"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
fail_under = 85

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["RUF012"]

[tool.black]
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_single = true
single_line_exclusions = ["typing"]
